# Pokemon

./: .gitignore  CMakeLists.txt  README.md  cmake-variants.yaml  main.cpp
Pokemon/: Pokemon.sln
Pokemon/Pokemon/: Pokemon.cpp  Pokemon.rc  Pokemon.vcxproj  Pokemon.vcxproj.filters  Resource.h
engine/: .gitignore  CMakeLists.txt
engine/include/: animation.hpp  blend_mod.hpp  color.hpp  dimension.hpp  dynamic_animation.hpp  game_engine.hpp  image_typedef.hpp  interface_animation.hpp  interface_mutable.hpp  line.hpp  point.hpp  rectangle.hpp  renderer.hpp  static_animation.hpp  surface.hpp  texture.hpp  time.hpp  window.hpp
engine/include/action_command/: default_action_command.h  iaction_command.h
engine/include/action_manager/: iaction_manager.h
engine/include/audio_manager/: iaudio_file.h
engine/include/engine/audio_manager/: iaudio_file_loader.h
engine/include/event_manager/: ievent_manager.h
engine/include/game_manager/: abstract_game_manager.h
engine/include/utils/: color.h  dimension.h  icolor.h  irectangle.h  line.h  point.h  rectangle.h
engine/include/video/: hardware_texture.h  irenderer.h  itexture.h  iwindow.h  renderer.h  surface.h  texture.h  window.h
engine/module/input_module/: CMakeLists.txt
engine/module/sound_module/: CMakeLists.txt
engine/module/visual_module/: CMakeLists.txt
engine/src/: animation.cpp  dynamic_animation.cpp  game_engine.cpp  renderer.cpp  static_animation.cpp  surface.cpp  texture.cpp  window.cpp
engine/src/utils/: color.cpp  dimension.cpp  line.cpp  point.cpp  rectangle.cpp
engine/src/video/: hardware_texture.cpp  renderer.cpp  surface.cpp  texture.cpp  window.cpp
game/: .gitignore  CMakeLists.txt  main.cpp
game/include/utils/: gauge.h
game/main/common/: CMakeLists.txt
game/main/common/include/: gauge.h  identifier.h  language.h  text.h  translation.h
game/main/common/src/: gauge.cpp  language.cpp  text.cpp  translation.cpp
game/main/computer/: CMakeLists.txt
game/main/computer/include/: box.h  computer.h
game/main/computer/src/: box.cpp  computer.cpp
game/main/experience/: CMakeLists.txt
game/main/experience/include/: erratic_experience_curve.h  fluctuating_experience_curve.h  medium_fast_experience_curve.h
game/main/experience/src/: erratic_experience_curve.cpp  experience_curve.cpp  fast_experience_curve.cpp  fluctuating_experience_curve.cpp  medium_slow_experience_curve.cpp
game/main/map/: CMakeLists.txt
game/main/map/include/: map.h  tile.h  tile_type.h
game/main/model/common/include/: gauge.h  language.h
game/main/model/common/src/: identifier.cpp  language.cpp  text.cpp
game/main/model/computer/: CMakeLists.txt
game/main/model/computer/include/: box.h  box.hpp  computer.h  computer.hpp
game/main/model/computer/src/: box.cpp  computer.cpp
game/main/model/experience/: CMakeLists.txt
game/main/model/experience/include/: erratic_experience_curve.h  erratic_experience_curve.hpp  experience_curve.h  fast_experience_curve.h  fast_experience_curve.hpp  fluctuating_experience_curve.hpp  iexperience_curve.h  iexperience_curve.hpp  medium_fast_experience_curve.hpp  medium_slow_experience_curve.h  medium_slow_experience_curve.hpp  slow_experience_curve.h  slow_experience_curve.hpp
game/main/model/experience/src/: erratic_experience_curve.cpp  fast_experience_curve.cpp  fluctuating_experience_curve.cpp  medium_fast_experience_curve.cpp  medium_slow_experience_curve.cpp  slow_experience_curve.cpp
game/main/model/monster/: CMakeLists.txt
game/main/model/monster/include/: ev.h  level.h  level.hpp  pokemon.h  specie.h
game/main/model/monster/src/: level.cpp
game/main/model/move/include/: move_accuracy.h  move_effect.h
game/main/model/specie/: CMakeLists.txt
game/main/model/specie/include/: effectiveness.hpp  effectiveness_comparator.hpp  nature.hpp  specie.h  stat.h  type.hpp
game/main/model/specie/src/: effectiveness.cpp  effectiveness_comparator.cpp  nature.cpp  type.cpp
game/main/monster/: CMakeLists.txt
game/main/monster/include/: coefficient.h  ev.h  experience.h  health.h  height.h  iv.h  learn_set.h  level.h  nature.h  pokemon.h  pokemon_create_info.h  specie.h  specie_create_info.h  stat.h  stats.h  type.h  weaknesses.h  weight.h
game/main/monster/src/: coefficient.cpp  ev.cpp  experience.cpp  health.cpp  iv.cpp  level.cpp  nature.cpp  pokemon.cpp  specie.cpp  type.cpp
game/main/move/: CMakeLists.txt
game/main/move/effect/: CMakeLists.txt
game/main/move/effect/include/: effect.h
game/main/move/effect/src/: effect.cpp
game/main/move/include/: move.h  move_accuracy.h  move_class.h  move_create_info.h  move_power.h  move_power_point.h
game/main/move/src/: move.cpp  move_accuracy.cpp  move_class.cpp  move_power.cpp  move_power_point.cpp
game/src/utils/: gauge.cpp
include/engine/action_command/: default_action_command.h  iaction_command.h
include/engine/action_manager/: iaction_manager.h
include/engine/audio_manager/: audio_file_loader.h  iaudio_command.h  iaudio_control.h  iaudio_file.h  iaudio_file_loader.h  iaudio_manager.h  iaudio_player.h  iaudio_volume.h  sdl_audio_control.h  sdl_audio_file.h  sdl_audio_player.h  sdl_audio_volume.h  sld_audio_player.h
include/engine/event/: ievent.h
include/engine/event_manager/: ievent_manager.h
include/engine/game_manager/: abstractgame_manager.h  igame_manager.h
include/engine/mapper/: default_event_mapper.h  ievent_mapper.h
include/engine/sound_manager/: isound_manager.h
include/engine/utils/: color.h  defaultcolor.h  defaultdimension.h  defaultpoint.h  defaultrectangle.h  dimension.h  icolor.h  idimension.h  ipoint.h  irectangle.h  point.h  rectangle.h  sdlcolor.h  sdlpoint.h  sdlrectangle.h
include/engine/video_manager/: ivideo_manager.h
src/engine/audio_manager/: audio_file_loader.cpp  sdl_audio_control.cpp  sdl_audio_file.cpp  sdl_audio_player.cpp  sdl_audio_volume.cpp
src/engine/utils/: color.cpp  defaultcolor.cpp  defaultdimension.cpp  defaultpoint.cpp  defaultrectangle.cpp  dimension.cpp  point.cpp  rectangle.cpp  sdlcolor.cpp  sdlpoint.cpp  sdlrectangle.cpp
(+19 files in other folders)
